--- a/gptTranslation.ipynb
+++ b/gptTranslation.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/moritzvitt/coding/.venv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -32,10 +24,17 @@
     "import json\n",
     "import openai\n",
     "\n",
-    "# Set your OpenAI API key\n",
     "openai.api_key = \"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\"\n",
+    "json_file = \"/Users/moritzvitt/moritzvitt.github.io/stories.json\"\n",
     "\n",
-    "language = 'spanish'\n",
+    "try:\n",
+    "    with open(json_file, 'r') as file:\n",
+    "        existing_data = json.load(file)\n",
+    "    if not isinstance(existing_data, list):\n",
+    "        existing_data = []  # Reset to an empty list if not in the correct format\n",
+    "except FileNotFoundError:\n",
+    "    existing_data = []\n",
+    "\n",
     "# Define the message you want to send to the model\n",
     "messages = [\n",
     "    {\"role\": \"user\", \"content\": f\"Please write a short story in {language}. Please write the story in 500 tokens, I am using the ChatGPT API\"}\n",
@@ -53,7 +52,7 @@
     "new_story = response.choices[0].message[\"content\"]\n",
     "\n",
     "# Specify the JSON file path\n",
-    "json_file = \"/Users/moritzvitt/moritzvitt.github.io/stories.json\"\n",
+    "\n",
     "\n",
     "# Check if the JSON file exists or needs to be created\n",
     "try:\n",
