--- a/storiesWDeepl.ipynb
+++ b/storiesWDeepl.ipynb
@@ -1,15 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# stories + formatting"
+    "# import deepl\n",
+    "\n",
+    "# auth_key = \"1325515b-767f-7a63-1877-ed78280328b2:fx\"  # Replace with your key\n",
+    "# translator = deepl.Translator(auth_key)\n",
+    "\n",
+    "# result = translator.translate_text(\"Hello, my guys! What is up!\", target_lang=\"FR\")\n",
+    "# print(result.text)  # \"Bonjour, le monde !\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,21 +32,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New story has been appended to /Users/moritzvitt/moritzvitt.github.io/stories.json\n"
+      "Word translations have been appended to /Users/moritzvitt/moritzvitt.github.io/stories.json\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "import openai\n",
+    "import deepl\n",
     "\n",
-    "# Set your OpenAI API key\n",
     "openai.api_key = \"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\"\n",
     "\n",
-    "language = 'spanish'\n",
+    "deepL_auth_key = \"1325515b-767f-7a63-1877-ed78280328b2:fx\"\n",
+    "translator = deepl.Translator(deepL_auth_key)\n",
+    "\n",
+    "#language, that the story should be written in\n",
+    "language = \"french\"\n",
     "# Define the message you want to send to the model\n",
     "messages = [\n",
-    "    {\"role\": \"user\", \"content\": f\"Please write a short story in {language}. Please write the story in 500 tokens, I am using the ChatGPT API\"}\n",
+    "    {\"role\": \"user\", \"content\": f\"Please write a short story in {language}. Please write the story in 500 tokens, so roughly 450 words, I am using the ChatGPT API.\"}\n",
     "]\n",
     "\n",
     "# Generate the story using the ChatGPT API\n",
@@ -52,6 +64,19 @@
     "# Extract the generated story from the API response\n",
     "new_story = response.choices[0].message[\"content\"]\n",
     "\n",
+    "# for japanese, split at [] instead of [.]\n",
+    "# first_sentence = new_story.split(\".\")[0] + \".\" \n",
+    "\n",
+    "# Split the story into words\n",
+    "words = new_story.split()\n",
+    "# words = [first_sentence + word for word in words]\n",
+    "# Translate each word and create a dictionary with word-translation pairs\n",
+    "word_translations = {}\n",
+    "\n",
+    "for word in words:\n",
+    "    translation_result = translator.translate_text(word, target_lang=\"EN-GB\")  # Translate to English or your target language\n",
+    "    word_translations[word] = translation_result.text\n",
+    "\n",
     "# Specify the JSON file path\n",
     "json_file = \"/Users/moritzvitt/moritzvitt.github.io/stories.json\"\n",
     "\n",
@@ -64,14 +89,15 @@
     "except FileNotFoundError:\n",
     "    existing_data = []\n",
     "\n",
-    "# Append the new story to the JSON data\n",
-    "existing_data.append({f\"{language}\": new_story})\n",
+    "    \n",
+    "existing_data.append({f\"{language}\": new_story,\n",
+    "                      \"translations\": word_translations})\n",
     "\n",
     "# Write the updated JSON data to the file\n",
     "with open(json_file, 'w') as file:\n",
     "    json.dump(existing_data, file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(f\"New story has been appended to {json_file}\")\n"
+    "print(f\"Word translations have been appended to {json_file}\")"
    ]
   }
  ],
